plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.0'
    id 'io.spring.dependency-management' version '1.1.5'
    id 'checkstyle'
}

group = 'com.fintrack'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

configurations.matching { it.name == 'checkstyle' }.all {
    resolutionStrategy {
        force 'com.puppycrawl.tools:checkstyle:10.17.0'
    }
}

dependencies {

    // WEB
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // JPA
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // VALIDATION (нужно для DTO)
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // POSTGRESQL (ВМЕСТО H2)
    runtimeOnly 'org.postgresql:postgresql'

    // LOMBOK
    compileOnly 'org.projectlombok:lombok:1.18.36'
    annotationProcessor 'org.projectlombok:lombok:1.18.36'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

checkstyle {
    ignoreFailures = false
    maxWarnings = 0
}

tasks.withType(Checkstyle).configureEach {
    configFile = file("${rootDir}/config/checkstyle/checkstyle.xml")
    reports {
        xml.required = true
        html.required = true
    }
}

tasks.named('test') {
    useJUnitPlatform()
}